--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body class="min-h-screen bg-gradient-to-b from-white via-blue-50 to-blue-100 flex items-center justify-center p-6">
   <div class="w-full max-w-3xl bg-white shadow-lg rounded-2xl p-8">
     <h1 class="text-2xl font-bold text-blue-800 mb-6">Civil Construction Employee Survey</h1>
-    <form class="space-y-6">
+    
+    <!-- Formspree integration -->
+    <form action="https://formspree.io/f/xldlynky" method="POST" class="space-y-6" id="surveyForm">
 
       <!-- 1. Job Satisfaction -->
       <div>
@@ -163,5 +165,25 @@
       </div>
     </form>
   </div>
+
+  <!-- Formspree script for success/error handling -->
+  <script>
+    const form = document.getElementById("surveyForm");
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const data = new FormData(form);
+      const response = await fetch(form.action, {
+        method: form.method,
+        body: data,
+        headers: { 'Accept': 'application/json' }
+      });
+      if (response.ok) {
+        alert("✅ Thank you — your survey has been submitted!");
+        form.reset();
+      } else {
+        alert("⚠️ Sorry, something went wrong. Please try again.");
+      }
+    });
+  </script>
 </body>
 </html>
